completed html for opening screen

--- a/index.html
+++ b/index.html
@@ -10,6 +10,17 @@
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
+  <div class="opening-screen">
+    <div class="title row">
+      <h1>The Dog App</h1>
+    </div>
+    <div class="paws row">
+      <img src="images/paws.png" alt="image of two paw prints">
+    </div>
+    <div class="button-div row">
+      <button>Get Started</button>
+    </div>
+  </div>
   <header>
   </header>
   <main>
