--- a/index.html
+++ b/index.html
@@ -8,23 +8,29 @@
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/layout.css">
   <link rel="stylesheet" href="css/styles.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Nunito&display=swap" rel="stylesheet">
 </head>
 <body>
-  <div class="opening-screen">
-    <div class="title row">
-      <h1>The Dog App</h1>
+  <div class="opening-screen row">
+    <div class="title row justify-center">
+      <h1 class="title pink margin-top">The Dog App</h1>
     </div>
-    <div class="paws row">
-      <img src="images/paws.png" alt="image of two paw prints">
+    <div class="row justify-center">
+      <img src="images/paws.png" alt="image of two paw prints" class="paws">
     </div>
-    <div class="button-div row">
-      <button>Get Started</button>
+    <div class="row justify-center width small-margin-top">
+      <button class="button get-started">Get Started</button>
     </div>
   </div>
-  <header>
-  </header>
-  <main>
-  </main>
+  <div class="container">
+    <header>
+    </header>
+    <main>
+    </main>
+  </div>
   <script src="js/data.js"></script>
   <script src="js/main.js"></script>
 </body>
