--- a/index.html
+++ b/index.html
@@ -34,9 +34,12 @@
         <div class="dog-image row justify-center smaller-margin-top">
           <img class="dog">
         </div>
+        <div class="dog-breed row justify-end">
+          <p class="dog-breed-text"></p>
+        </div>
       </main>
     </div>
-    <footer class="row column-full padding-vert">
+    <footer class="row column-full">
       <div class="footer-half row justify-center">
         <img src="images/house-door.png" alt="image of house">
       </div>
