a random button was added to return a new dog, also cleaned up CSS and tested functionality

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <img src="images/paws.png" alt="image of two paw prints" class="paws">
     </div>
     <div class="row justify-center width small-margin-top">
-      <button class="button get-started">Get Started</button>
+      <button class="button get-started big-padding">Get Started</button>
     </div>
   </div>
   <div class="home-screen hidden">
@@ -35,13 +35,18 @@
           <img class="dog">
         </div>
         <div class="dog-breed row justify-end">
-          <p class="dog-breed-text"></p>
+          <p class="dog-breed-text margin-none caption-font"></p>
+        </div>
+        <div class="above-footer row width padding-around">
+          <div class="random-button all-column-half">
+            <button class="button get-started small-padding random">Random</button>
+          </div>
         </div>
       </main>
     </div>
     <footer class="row column-full">
       <div class="footer-half row justify-center">
-        <img src="images/house-door.png" alt="image of house">
+        <img src="images/house-door.png" alt="image of house" class="padding-around">
       </div>
     </footer>
   </div>
