--- a/index.html
+++ b/index.html
@@ -40,11 +40,13 @@
     </header>
     <div class="container">
       <main>
-        <div class="dog-image row justify-center">
-          <img class="dog">
-        </div>
-        <div class="dog-breed row justify-end">
-          <p class="dog-breed-text margin-none caption-font"></p>
+        <div class="row justify-center">
+          <div class="dog-image row text-align-right">
+            <div class="dog-breed width justify-center">
+            <img class="dog">
+            <p class="dog-breed-text margin-none caption-font"></p>
+          </div>
+           </div>
         </div>
         <div class="above-footer row width padding-around">
           <div class="random-button all-column-half">
