added area/link for user to click for more information

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
             <div class="dog-breed width justify-center">
             <img class="dog">
             <p class="dog-breed-text margin-none caption-font"></p>
+            <p class="breed-info margin-none caption-font"></p>
           </div>
            </div>
         </div>
@@ -52,6 +53,18 @@
           <div class="random-button all-column-half">
             <button class="button get-started small-padding random">Random</button>
           </div>
+        </div>
+        <div class="modal">
+          <h2>Breed:</h2>
+          <p></p>
+          <h2>Bred for:</h2>
+          <p></p>
+          <h2>Height:</h2>
+          <p></p>
+          <h2>Weight:</h2>
+          <p></p>
+          <h2>Temperment:</h2>
+          <p></p>
         </div>
       </main>
     </div>
