--- a/index.html
+++ b/index.html
@@ -55,16 +55,18 @@
           </div>
         </div>
         <div class="modal">
-          <h2>Breed:</h2>
-          <p></p>
-          <h2>Bred for:</h2>
-          <p></p>
-          <h2>Height:</h2>
-          <p></p>
-          <h2>Weight:</h2>
-          <p></p>
-          <h2>Temperment:</h2>
-          <p></p>
+          <div class="modal-content">
+            <h2>Breed:</h2>
+            <p></p>
+            <h2>Bred for:</h2>
+            <p></p>
+            <h2>Height:</h2>
+            <p></p>
+            <h2>Weight:</h2>
+            <p></p>
+            <h2>Temperment:</h2>
+            <p></p>
+          </div>
         </div>
       </main>
     </div>
