--- a/index.html
+++ b/index.html
@@ -66,6 +66,9 @@
             <p></p>
             <h2>Temperment:</h2>
             <p></p>
+              <div class="row justify-end">
+                <button class="button small-padding get-started sixteen-font">Exit</button>
+              </div>
           </div>
         </div>
       </main>
