implemented javascript to show/hide modal

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <div class="dog-breed width justify-center">
             <img class="dog">
             <p class="dog-breed-text margin-none caption-font"></p>
-            <p class="breed-info margin-none caption-font"></p>
+            <p class="breed-info margin-none caption-font underline"></p>
           </div>
            </div>
         </div>
@@ -54,20 +54,20 @@
             <button class="button get-started small-padding random">Random</button>
           </div>
         </div>
-        <div class="modal">
+        <div class="modal hidden">
           <div class="modal-content">
-            <h2>Breed:</h2>
-            <p></p>
-            <h2>Bred for:</h2>
-            <p></p>
-            <h2>Height:</h2>
-            <p></p>
-            <h2>Weight:</h2>
-            <p></p>
-            <h2>Temperment:</h2>
-            <p></p>
+            <h2 class="margin-bottom-none">Breed:</h2>
+            <p class="margin-top-none caption-font breed-name"></p>
+            <h2 class="margin-bottom-none">Bred for:</h2>
+            <p class="margin-top-none caption-font bred-for"></p>
+            <h2 class="margin-bottom-none">Height:</h2>
+            <p class="margin-top-none caption-font breed-height"></p>
+            <h2 class="margin-bottom-none">Weight:</h2>
+            <p class="margin-top-none caption-font breed-weight"></p>
+            <h2 class="margin-bottom-none">Temperament:</h2>
+            <p class="margin-top-none caption-font breed-temperament"></p>
               <div class="row justify-end">
-                <button class="button small-padding get-started sixteen-font">Exit</button>
+                <button class="button small-padding get-started sixteen-font bottom-right exit">Exit</button>
               </div>
           </div>
         </div>
