made desktop compatible and cleaned up css

--- a/index.html
+++ b/index.html
@@ -56,16 +56,16 @@
         </div>
         <div class="modal hidden">
           <div class="modal-content">
-            <h2 class="margin-bottom-none">Breed:</h2>
-            <p class="margin-top-none caption-font breed-name"></p>
-            <h2 class="margin-bottom-none">Bred for:</h2>
-            <p class="margin-top-none caption-font bred-for"></p>
-            <h2 class="margin-bottom-none">Height:</h2>
-            <p class="margin-top-none caption-font breed-height"></p>
-            <h2 class="margin-bottom-none">Weight:</h2>
-            <p class="margin-top-none caption-font breed-weight"></p>
-            <h2 class="margin-bottom-none">Temperament:</h2>
-            <p class="margin-top-none caption-font breed-temperament"></p>
+            <h2 class="margin-bottom-none underline twenty-font">Breed:</h2>
+            <p class="margin-top-none caption-font twenty-font breed-name"></p>
+            <h2 class="margin-bottom-none underline twenty-font">Bred for:</h2>
+            <p class="margin-top-none caption-font twenty-font bred-for"></p>
+            <h2 class="margin-bottom-none underline twenty-font">Height:</h2>
+            <p class="margin-top-none caption-font twenty-font breed-height"></p>
+            <h2 class="margin-bottom-none underline twenty-font">Weight:</h2>
+            <p class="margin-top-none caption-font twenty-font breed-weight"></p>
+            <h2 class="margin-bottom-none underline twenty-font">Temperament:</h2>
+            <p class="margin-top-none caption-font twenty-font breed-temperament"></p>
               <div class="row justify-end">
                 <button class="button small-padding get-started sixteen-font bottom-right exit">Exit</button>
               </div>
