removed height from modal and removed positioning element for exit button

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <h2 class="margin-bottom-none underline twenty-font">Temperament:</h2>
             <p class="margin-top-none caption-font twenty-font breed-temperament"></p>
               <div class="row justify-end">
-                <button class="button small-padding get-started sixteen-font bottom-right exit">Exit</button>
+                <button class="button small-padding get-started sixteen-font exit">Exit</button>
               </div>
           </div>
         </div>
