created bookmark button

--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
               <div class="random-button all-column-half">
                 <button class="button get-started small-padding random">Random</button>
               </div>
+              <div class="all-column-half flex justify-end">
+                <button class="button tiny-padding"><img src="images/bookmark-plus.png" class="bookmark-button"></button>
+              </div>
             </div>
         </div>
         <div class="modal hidden">
