bookmark icon now changes on click

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <button class="button get-started small-padding random">Random</button>
               </div>
               <div class="all-column-half flex justify-end">
-                <button class="button tiny-padding"><img src="images/bookmark-plus.png" class="bookmark-button"></button>
+                <button class="button bookmark-button tiny-padding"><img src="images/bookmark-plus.png" class="bookmark-icon"></button>
               </div>
             </div>
         </div>
