--- a/index.html
+++ b/index.html
@@ -58,27 +58,27 @@
                 </div>
               </div>
           </div>
-          <div class="modal hidden">
-            <div class="modal-content">
-              <h2 class="margin-bottom-none underline twenty-font">Breed:</h2>
-              <p class="margin-top-none caption-font twenty-font breed-name"></p>
-              <h2 class="margin-bottom-none underline twenty-font">Bred for:</h2>
-              <p class="margin-top-none caption-font twenty-font bred-for"></p>
-              <h2 class="margin-bottom-none underline twenty-font">Height:</h2>
-              <p class="margin-top-none caption-font twenty-font breed-height"></p>
-              <h2 class="margin-bottom-none underline twenty-font">Weight:</h2>
-              <p class="margin-top-none caption-font twenty-font breed-weight"></p>
-              <h2 class="margin-bottom-none underline twenty-font">Temperament:</h2>
-              <p class="margin-top-none caption-font twenty-font breed-temperament"></p>
-                <div class="row justify-end">
-                  <button class="button small-padding get-started sixteen-font exit">Exit</button>
-                </div>
-            </div>
-          </div>
         </div>
         <div class="view-page">
-          <ul class="no-padding">
+          <ul class="bottom-padding">
           </ul>
+        </div>
+        <div class="modal hidden">
+          <div class="modal-content">
+            <h2 class="margin-bottom-none underline twenty-font">Breed:</h2>
+            <p class="margin-top-none caption-font twenty-font breed-name"></p>
+            <h2 class="margin-bottom-none underline twenty-font">Bred for:</h2>
+            <p class="margin-top-none caption-font twenty-font bred-for"></p>
+            <h2 class="margin-bottom-none underline twenty-font">Height:</h2>
+            <p class="margin-top-none caption-font twenty-font breed-height"></p>
+            <h2 class="margin-bottom-none underline twenty-font">Weight:</h2>
+            <p class="margin-top-none caption-font twenty-font breed-weight"></p>
+            <h2 class="margin-bottom-none underline twenty-font">Temperament:</h2>
+            <p class="margin-top-none caption-font twenty-font breed-temperament"></p>
+            <div class="row justify-end">
+              <button class="button small-padding get-started sixteen-font exit">Exit</button>
+            </div>
+          </div>
         </div>
       </main>
     </div>
