made buttons in the footer functional

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </header>
     <div class="container">
       <main>
-        <div class="home-page hidden">
+        <div class="home-page">
           <div class="row justify-center">
             <div class="dog-image row text-align-right">
               <div class="dog-breed width justify-center">
@@ -59,7 +59,7 @@
               </div>
           </div>
         </div>
-        <div class="view-page">
+        <div class="view-page hidden">
           <ul class="bottom-padding">
           </ul>
         </div>
@@ -84,10 +84,10 @@
     </div>
     <footer class="row column-full desktop-hidden">
       <div class="footer-half row justify-center">
-        <img src="images/house-door.png" alt="image of house" class="padding-around">
+        <img src="images/house-door.png" alt="image of house" class="home-button padding-around">
       </div>
       <div class="footer-half row justify-center">
-        <img src="images/bookmark-black.png" alt="black bookmark" class="padding-around">
+        <img src="images/bookmark-black.png" alt="black bookmark" class="saved-button padding-around">
       </div>
     </footer>
   </div>
