made feature desktop compatible with header icons

--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
     <header class="row justify-center-mobile">
       <h2 class="title pink header margin-none">The Dog App</h2>
       <div class="icon mobile-hidden">
-        <img src="images/house-door.png" alt="image of house" class="padding-around">
+        <img src="images/house-door.png" alt="image of house" class="home-button-header padding-around">
+        <img src="images/bookmark-black.png" alt="black bookmark" class="saved-button-header padding-around">
       </div>
     </header>
     <div class="container">
