fixed desktop view to match figma

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           </div>
         </div>
         <div class="view-page hidden">
-          <ul class="bottom-padding">
+          <ul class="bottom-padding text-align-right-mobile">
           </ul>
         </div>
         <div class="modal hidden">
