stores rating and comments into local storage and successfully appends it to the DOM

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
           </div>
         </div>
 
-        <div class="modal">
+        <div class="modal judge hidden">
           <div class="modal-content">
             <div class="stars row justify-center">
               <img src="images/star-empty.png" alt="empty star" class="star-icons" value="1">
@@ -96,7 +96,7 @@
               <textarea class="textarea twenty-font" rows="12"></textarea>
             </div>
             <div class="row justify-end">
-              <button class="button small-padding twenty-font get-started">Save</button>
+              <button class="button small-padding twenty-font get-started save">Save</button>
             </div>
           </div>
         </div>
