--- a/index.html
+++ b/index.html
@@ -46,15 +46,15 @@
             <div class="dog-image row text-align-right">
               <div class="dog-breed width justify-center">
               <img class="dog">
-              <p class="dog-breed-text margin-none caption-font"></p>
-              <p class="breed-info margin-none caption-font underline"></p>
+              <p class="dog-breed-text margin-none sixteen-font"></p>
+              <p class="breed-info margin-none sixteen-font underline"></p>
               </div>
             </div>
               <div class="above-footer row width padding-around">
                 <div class="random-button all-column-half">
                   <button class="button get-started small-padding random">Random</button>
                 </div>
-                <div class="all-column-half flex justify-end">
+                <div class="all-column-half row justify-end">
                   <button class="button bookmark-button tiny-padding"><img src="images/bookmark-plus.png" class="bookmark-icon"></button>
                 </div>
               </div>
@@ -66,16 +66,16 @@
         </div>
         <div class="modal hidden">
           <div class="modal-content">
-            <h2 class="margin-bottom-none underline twenty-font">Breed:</h2>
-            <p class="margin-top-none caption-font twenty-font breed-name"></p>
-            <h2 class="margin-bottom-none underline twenty-font">Bred for:</h2>
-            <p class="margin-top-none caption-font twenty-font bred-for"></p>
-            <h2 class="margin-bottom-none underline twenty-font">Height:</h2>
-            <p class="margin-top-none caption-font twenty-font breed-height"></p>
-            <h2 class="margin-bottom-none underline twenty-font">Weight:</h2>
-            <p class="margin-top-none caption-font twenty-font breed-weight"></p>
-            <h2 class="margin-bottom-none underline twenty-font">Temperament:</h2>
-            <p class="margin-top-none caption-font twenty-font breed-temperament"></p>
+            <h2 class="margin-bottom-none underline sixteen-font">Breed:</h2>
+            <p class="margin-top-none sixteen-font breed-name"></p>
+            <h2 class="margin-bottom-none underline sixteen-font">Bred for:</h2>
+            <p class="margin-top-none sixteen-font bred-for"></p>
+            <h2 class="margin-bottom-none underline sixteen-font">Height:</h2>
+            <p class="margin-top-none sixteen-font breed-height"></p>
+            <h2 class="margin-bottom-none underline sixteen-font">Weight:</h2>
+            <p class="margin-top-none sixteen-font breed-weight"></p>
+            <h2 class="margin-bottom-none underline sixteen-font">Temperament:</h2>
+            <p class="margin-top-none sixteen-font breed-temperament"></p>
             <div class="row justify-end">
               <button class="button small-padding get-started sixteen-font exit">Exit</button>
             </div>
@@ -93,11 +93,11 @@
                 <img src="images/star-empty.png" alt="empty star" class="star-icons" value="5">
               </div>
               <div class="comments width">
-                <p class="margin-bottom-none twenty-font">Comments</p>
-                <textarea class="textarea twenty-font" rows="12"></textarea>
+                <p class="margin-bottom-none sixteen-font">Comments</p>
+                <textarea class="textarea sixteen-font" rows="12"></textarea>
               </div>
               <div class="row justify-end">
-                <button class="button small-padding twenty-font get-started save">Save</button>
+                <button class="button small-padding sixteen-font get-started save">Save</button>
               </div>
             </form>
           </div>
