fixed css to max figma

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
               <p class="breed-info margin-none sixteen-font underline"></p>
               </div>
             </div>
-              <div class="above-footer row width padding-around">
+              <div class="above-footer row width-90">
                 <div class="random-button all-column-half">
                   <button class="button get-started small-padding random">Random</button>
                 </div>
