--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Peep Dog</title>
-  <link rel="icon" href="images/favicon.ico">
+  <link rel="icon" href="images/paws.png">
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="css/layout.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
