made project sharable w meta tags for social media

--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Nunito&display=swap" rel="stylesheet">
+  <meta property="og:title" content="Peep Dog">
+  <meta property="og:description" content="Viewing of random dog images with saving and rating functions.">
+  <meta property="og:image" content="https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/dog-puppy-on-garden-royalty-free-image-1586966191.jpg?crop=1.00xw:0.669xh;0,0.190xh&resize=1200:*">
+  <meta property="og:url" content="https://hsu-isaac.github.io/peep-dog/">
+  <meta name="twitter:title" content="Peep Dog">
+  <meta name="twitter:description" content="Viewing of random dog images with saving and rating functions.">
+  <meta name="twitter:image" content="https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/dog-puppy-on-garden-royalty-free-image-1586966191.jpg?crop=1.00xw:0.669xh;0,0.190xh&resize=1200:*">
 </head>
 <body class="background-color-blue">
   <div class="opening-screen row container desktop-center">
