--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </div>
     <div class="column-half">
       <div class="title row justify-center">
-        <h1 class="title pink">The Dog App</h1>
+        <h1 class="title pink">Peep Dog</h1>
       </div>
       <div class="row justify-center desktop-hidden">
         <img src="images/paws.png" alt="image of two paw prints" class="paws margin-bottom">
@@ -39,7 +39,7 @@
   <div class="spinner hidden"></div>
   <div class="home-screen hidden">
     <header class="row justify-center-mobile">
-      <h2 class="title pink header margin-none">The Dog App</h2>
+      <h2 class="title pink header margin-none">Peep Dog</h2>
       <div class="icon mobile-hidden">
         <img src="images/house-door.png" alt="image of house" class="home-button-header padding-around">
         <img src="images/bookmark-black.png" alt="black bookmark" class="saved-button-header padding-around">
