--- a/index.html
+++ b/index.html
@@ -41,8 +41,14 @@
     <header class="row justify-center-mobile">
       <h2 class="title pink header margin-none">Peep Dog</h2>
       <div class="icon mobile-hidden">
-        <img src="images/house-door.png" alt="image of house" class="home-button-header padding-around">
-        <img src="images/bookmark-black.png" alt="black bookmark" class="saved-button-header padding-around">
+        <div class="desktop-header-icons actual-column text-align-center">
+          <img src="images/house-door.png" alt="image of house" class="home-button-header padding-around">
+          <span>Home</span>
+        </div>
+        <div class="desktop-header-icons actual-column text-align-center">
+          <img src="images/bookmark-black.png" alt="black bookmark" class="saved-button-header padding-around">
+          <span>Bookmarks</span>
+        </div>
       </div>
     </header>
     <div class="container">
