added brief description on homepage

--- a/index.html
+++ b/index.html
@@ -33,6 +33,10 @@
       </div>
       <div class="row justify-center width">
         <button class="button get-started big-padding">Get Started</button>
+        <div class="description width-90 text-align-center">
+          <p class="pink margin-top-two">An app for viewing, saving, and rating random dog pictures!</p>
+        </div>
+
       </div>
     </div>
   </div>
