fixed alignment issue in LI when displaying dogs, changed from justify-end to justify-center

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       </div>
     </header>
     <div class="container">
-      <main>
+      <main class="justify-center flex">
         <div class="home-page">
           <div class="row justify-center">
             <div class="dog-image row text-align-right">
