removed commented code

--- a/index.html
+++ b/index.html
@@ -46,12 +46,10 @@
       <h2 class="title pink header margin-none">Peep Dog</h2>
       <div class="icon mobile-hidden">
         <div class="desktop-header-icons actual-column text-align-center justify-center">
-<!--           <img src="images/house-door.png" alt="image of house" class="home-button-header padding-around">
- -->          <span class="home-button-header padding-left">Home</span>
+          <span class="home-button-header padding-left">Home</span>
         </div>
         <div class="desktop-header-icons actual-column text-align-center justify-center">
-<!--           <img src="images/bookmark-black.png" alt="black bookmark" class="saved-button-header padding-around">
- -->          <span class="saved-button-header padding-left">Bookmarks</span>
+          <span class="saved-button-header padding-left">Bookmarks</span>
         </div>
       </div>
     </header>
