removed unncessary divs

--- a/index.html
+++ b/index.html
@@ -56,22 +56,20 @@
     <div class="container">
       <main class="justify-center flex">
         <div class="home-page">
-          <div class="row justify-center">
-            <div class="dog-image">
-              <div class="dog-breed justify-center">
-                <img class="dog">
-                <div class="text-align-right">
-                  <p class="dog-breed-text margin-none sixteen-font"></p>
-                  <p class="breed-info margin-none sixteen-font underline"></p>
+          <div class="row justify-center dog-image">
+            <div class="dog-breed justify-center">
+              <img class="dog">
+              <div class="text-align-right">
+                <p class="dog-breed-text margin-none sixteen-font"></p>
+                <p class="breed-info margin-none sixteen-font underline"></p>
+              </div>
+              <div class="above-footer justify-space-between row">
+                <div class="random-button all-column-half">
+                  <button class="button get-started small-padding random">Random</button>
                 </div>
-                <div class="above-footer justify-space-between row">
-                  <div class="random-button all-column-half">
-                    <button class="button get-started small-padding random">Random</button>
-                  </div>
-                  <div class="all-column-half row justify-end">
-                    <button class="button bookmark-button tiny-padding"><img src="images/bookmark-plus.png"
-                        class="bookmark-icon"></button>
-                  </div>
+                <div class="all-column-half row justify-end">
+                  <button class="button bookmark-button tiny-padding"><img src="images/bookmark-plus.png"
+                      class="bookmark-icon"></button>
                 </div>
               </div>
             </div>
@@ -84,15 +82,15 @@
         <div class="modal hidden">
           <div class="modal-content">
             <h2 class="margin-bottom-none underline sixteen-font">Breed:</h2>
-            <p class="margin-top-none sixteen-font breed-name"></p>
+            <p class="margin-top-none breed-name"></p>
             <h2 class="margin-bottom-none underline sixteen-font">Bred for:</h2>
-            <p class="margin-top-none sixteen-font bred-for"></p>
+            <p class="margin-top-none bred-for"></p>
             <h2 class="margin-bottom-none underline sixteen-font">Height:</h2>
-            <p class="margin-top-none sixteen-font breed-height"></p>
+            <p class="margin-top-none breed-height"></p>
             <h2 class="margin-bottom-none underline sixteen-font">Weight:</h2>
-            <p class="margin-top-none sixteen-font breed-weight"></p>
+            <p class="margin-top-none breed-weight"></p>
             <h2 class="margin-bottom-none underline sixteen-font">Temperament:</h2>
-            <p class="margin-top-none sixteen-font breed-temperament"></p>
+            <p class="margin-top-none breed-temperament"></p>
             <div class="row justify-end">
               <button class="button small-padding get-started sixteen-font exit">Exit</button>
             </div>
